Add options to ellipsis

--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,2 @@
-@polymer:registry=https://registry.npmjs.org
-registry=https://npm.pkg.github.com/Quicksilver0218
-//npm.pkg.github.com/:_authToken=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
+@polymer:registry=https://npm.pkg.github.com/Quicksilver0218
+//npm.pkg.github.com/:_authToken=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
