--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@quicksilver0218/react-pagin",
-  "version": "1.1.1",
-  "description": "A lightweight element organizing component allowing high customization for pagination implemented in React.",
+  "version": "1.2.0",
+  "description": "A lightweight element organizing component allowing high customization for pagination, implemented in React.",
   "main": "lib",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
