--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "name": "@quicksilver0218/react-pagin",
-  "version": "1.2.5",
+  "version": "1.2.8",
   "description": "A lightweight element organizing component allowing high customization for pagination, implemented in React.",
-  "main": "lib/cjs",
-  "module": "lib/esm",
-  "types": "lib/index.d.ts",
+  "main": "dist",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "npm run build:esm && npm run build:cjs && npm run build:types",
-    "build:esm": "tsc --module es6 --outDir lib/esm && uglifyjs --compress --mangle -o lib/esm/index.js lib/esm/index.js",
-    "build:cjs": "tsc --module commonjs --outDir lib/cjs && uglifyjs --compress --mangle -o lib/cjs/index.js lib/cjs/index.js",
-    "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir lib",
+    "build": "tsc && uglifyjs --compress --mangle -o dist/index.js dist/index.js",
     "format": "prettier --write \"src/**/*.tsx\"",
     "lint": "eslint src/** --fix",
     "prepublishOnly": "npm test && npm run lint && npm run build"
@@ -51,8 +47,7 @@
     "react": "*"
   },
   "files": [
-    "lib",
-    "src"
+    "dist"
   ],
   "repository": {
     "type": "git",
