--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,11 @@
   ],
   "compilerOptions": {
     "strict": true,
-    "esModuleInterop": true,
+    "declaration": true,
     "moduleResolution": "node",
-    "sourceMap": true,
     "jsx": "react-jsx",
+    "module": "commonjs",
     "target": "es6",
-    "outDir": "lib"
+    "outDir": "dist"
   }
 }
