--- a/jestconfig.json
+++ b/jestconfig.json
@@ -2,6 +2,5 @@
   "transform": {
     "^.+\\.tsx?$": "ts-jest"
   },
-  "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(tsx?)$",
-  "moduleFileExtensions": ["tsx", "tsx", "js", "jsx", "json", "node"]
+  "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(tsx?)$"
 }
