Remove the 'parentElement' property

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@quicksilver0218/react-pagin",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "description": "A lightweight element organizing component allowing high customization for pagination, implemented in React.",
+  "type": "module",
   "main": "dist",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest --config jestconfig.json",
-    "build": "tsc && uglifyjs --compress --mangle -o dist/index.js dist/index.js",
-    "format": "prettier --write \"src/**/*.tsx\"",
+    "test": "jest",
+    "build": "rimraf dist && tsc && uglifyjs dist/index.js --compress --mangle -o dist/index.js",
     "lint": "eslint src/** --fix",
     "prepublishOnly": "npm test && npm run lint && npm run build"
   },
@@ -27,20 +27,26 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@types/jest": "^27.0.2",
-    "@types/react": "^17.0.22",
-    "@types/react-test-renderer": "^17.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.2",
-    "@typescript-eslint/parser": "^4.31.2",
-    "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.26.0",
-    "jest": "^27.2.4",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-test-renderer": "^17.0.2",
-    "ts-jest": "^27.0.5",
-    "typescript": "^4.4.3",
-    "uglify-js": "^3.14.2"
+    "@eslint/js": "^9.22.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.2.0",
+    "@types/jest": "^29.5.14",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.26.0",
+    "@typescript-eslint/parser": "^8.26.0",
+    "eslint": "^9.22.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "react": "^19.0.0",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0",
+    "uglify-js": "^3.19.3"
   },
   "peerDependencies": {
     "react": "*"
